<resources>
    <string name="app_name">Zapasovnik</string>
    <string name="players_btn">Players</string>
    <string name="teams_btn">Teams</string>
    <string name="matches_btn">Matches</string>
    <string name="home_match_hint">Scroll down to see more</string>
    <string name="login_btn">LOGIN</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="invalid_login">Invalid login</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="network_error">Network error</string>
    <string name="login_failed">Login failed</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="fav_players">Favorite players</string>
    <string name="fav_teams">Favorite teams</string>
    <string name="fav_matches">Favorite matches</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="retype_new">Re-enter new password</string>
    <string name="new_not_same">Passwords are not the same</string>
    <string name="old_wrong">Old password is incorrect</string>
    <string name="logout">Logout</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="enter_password">Enter password</string>
    <string name="register_btn">Register</string>
    <string name="fill_all_fields">Please, fill all fields</string>
    <string name="add_player">Add player</string>
    <string name="new_player_fname">Player\'s first name</string>
    <string name="new_player_lname">Player\'s last name</string>
    <string name="new_player_team">Player\'s team</string>
    <string name="new_player_birth">Player\'s birth date</string>
    <string name="new_player_add_btn">Add player</string>
    <string name="new_player_enter_name">Enter name</string>
    <string name="new_player_success">Player added successfully</string>
    <string name="del_player">Delete player</string>
    <string name="add_fav">Add to favorite</string>
    <string name="add_del">Remove from favorite</string>
    <string name="add_match">Add match</string>
    <string name="new_match_t1">Enter Team1</string>
    <string name="new_match_t2">Enter Team2</string>
    <string name="new_match_league">Enter league</string>
    <string name="new_match_success">Match added succesfully</string>
    <string name="match_detail_t1">Team1</string>
    <string name="match_detail_t2">Team2</string>
    <string name="match_detail_date">Date</string>
    <string name="match_detail_league">League</string>
    <string name="del_match">Delete match</string>
    <string name="add_team">Add team</string>
    <string name="delete_team">Delete Team</string>
    <string name="team_name">Team name</string>
    <string name="team_est">Team established</string>
    <string name="new_team_name">Enter team name</string>
    <string name="new_team_est">Team established</string>
    <string name="new_team_success">Team added succesfully</string>
    <string name="leagues_btn">Leagues</string>
    <string name="del_league">Delete league</string>
    <string name="league_name">League name</string>
    <string name="add_league">Add league</string>
    <string name="new_league_name">Enter league name</string>
    <string name="new_league_success">League added succesfully</string>
    <string name="edit_league">Edit league</string>
    <string name="edit_player">Edit player</string>
    <string name="edit_team">Edit team</string>
    <string name="edit_match">Edit match</string>
</resources>