<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/teamDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/team_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/team_est"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/teamDetailEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/teamDetailName"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/deleteTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:color/holo_red_dark"
        android:padding="8dp"
        android:text="@string/delete_team"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="357dp" />

    <Button
        android:id="@+id/addToFavTeams"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_fav"
        app:layout_constraintEnd_toEndOf="@+id/deleteTeamBtn"
        app:layout_constraintStart_toStartOf="@+id/deleteTeamBtn"
        app:layout_constraintTop_toBottomOf="@+id/deleteTeamBtn" />

    <Button
        android:id="@+id/delFromFavTeams"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_del"
        app:layout_constraintEnd_toEndOf="@+id/addToFavTeams"
        app:layout_constraintStart_toStartOf="@+id/addToFavTeams"
        app:layout_constraintTop_toBottomOf="@+id/addToFavTeams" />

    <Button
        android:id="@+id/editTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_team"
        app:layout_constraintEnd_toEndOf="@+id/deleteTeamBtn"
        app:layout_constraintStart_toStartOf="@+id/deleteTeamBtn"
        app:layout_constraintTop_toBottomOf="@+id/delFromFavTeams" />

</androidx.constraintlayout.widget.ConstraintLayout>