<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="198dp" />

    <EditText
        android:id="@+id/changePwdOld"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="10dp"
        android:width="256dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/changePwdNew"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:width="256dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/changePwdOld"
        app:layout_constraintTop_toTopOf="@+id/changePwdOld" />

    <EditText
        android:id="@+id/changePwdNewRe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:width="256dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/retype_new"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/changePwdOld"
        app:layout_constraintTop_toTopOf="@+id/changePwdNew" />

    <Button
        android:id="@+id/changeConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/changePwdNewRe" />
</androidx.constraintlayout.widget.ConstraintLayout>